welcome.lessons.welcome.array.island.Island.scala.error
island:20: error: not found: value k
		i=k
                  ^